conformance/tests/backendtlspolicy-preserve-foreign-status.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backendtlspolicy-preserve-foreign-status
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
  hostnames:
  - preserve.example.com
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-preserve-foreign-status-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy-preserve-foreign-status
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-preserve-foreign-status-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
  - name: "btls"
    protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: backendtlspolicy-preserve-foreign-status
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: "backendtlspolicy-preserve-foreign-status-test"
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      # This ConfigMap is generated dynamically by the test suite.
      # It contains the CA certificate used to sign the tls-backend serving certificate.
      name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
